--- a/math/notes/prd-analysis/cmp-probability-theory.tex
+++ b/math/notes/prd-analysis/cmp-probability-theory.tex
@@ -70,7 +70,7 @@
 	\blank[line]
 
 	\starttikzcd [row sep=huge, column sep=huge]
-		unif
+		\text{unif}
 				\arrow[r, middlegreen]
 				\arrow[d, middlegreen]
 			\NC  L^∞
@@ -87,9 +87,9 @@
 				\arrow[l, bend right, darkblue, swap, "\text{u.i. ∨ unif bound}"]
 			\NC  w^*
 				\arrow[l, bend right, swap, darkorange, "const" description]
-		\NR  pt
+		\NR  \text{pt}
 				\arrow[r, middlegreen]
-			\NC  a.s.
+			\NC  \text{a.s.}
 				\arrow[urrr, middlegreen]
 				\arrow[urr, dotted, red, near end, "LDCT?" description]  \NR
 	\stoptikzcd
