--- a/math/notes/prd-category-theory/prd-category-theory.tex
+++ b/math/notes/prd-category-theory/prd-category-theory.tex
@@ -1,13 +1,48 @@
+% Variables
+
+% Language
+\setvariables [document] [language=en]
+
+% Version and mode
+\setvariables [document] [version=temporary]    % {final, concept, temporary}
+\setvariables [document] [mode=presentation]    % {presentation, manuscript, handout}
+
+% Colors
+\setvariables [document] [color-link-external=royalblue]
+\setvariables [document] [color-link-internal=violetred]
+
+% \setvariables [document] [color-background=azure]
+\setvariables [document] [color-background=white]
+\setvariables [document] [color-foreground=darkslategray]
+\setvariables [document] [color-headings=firebrick]
+
+% Fonts
+% No  (increasing order of yes): hvmath, mathtimes, iwona, asana, informal, charter, garamond, utopia, cambria
+% Yes (decreasing order of yes): palatino, xits, xitsbidi, euler, pagellaovereuler, schola, times, modern, antykwa-torunska, bonum
+\setvariables [document] [font=palatino]
+\setvariables [document] [fontsize=12pt]
+
+% Document specific information
+\setvariables [document] [title={Category theory}]
+\setvariables [document] [subtitle={A study of Lawvere-Schanuel}]
+\setvariables [document] [author={Sudip Sinha}]
+\setvariables [document] [date={\date}]
+\setvariables [document] [keyword={mathematics, solutions, notes, category theory}]
+
+
+
 \startproduct *
 
 \project  prj-notes
 
 
+\startstandardmakeup
+	\title    %Titlepage for the book
+\stopstandardmakeup
+ 
+
 \startfrontmatter
-
-	% \component titlepage     %Titlepage for the book
 	\completecontent    % Contents
-
 \stopfrontmatter
 
 
@@ -20,7 +55,6 @@
 	% \startpart[title={modules}, reference=prt:modules]
 	% 	\component  cmp-modules
 	% \stoppart
-
 \stopbodymatter
 
 
@@ -33,7 +67,6 @@
 	\startchapter [title=Bibliography]
 		\placelistofpublications
 	\stopchapter
-
 \stopbackmatter
 
 \stopproduct
