--- a/math/notes/prd-combinatorics/prd-combinatorics.tex
+++ b/math/notes/prd-combinatorics/prd-combinatorics.tex
@@ -1,15 +1,48 @@
+\setvariables [document] [language=en]
+
+% Version and mode
+\setvariables [document] [version=temporary]    % {final, concept, temporary}
+\setvariables [document] [mode=presentation]    % {presentation, manuscript, handout}
+
+% Colors
+\setvariables [document] [color-link-external=royalblue]
+\setvariables [document] [color-link-internal=violetred]
+
+% \setvariables [document] [color-background=azure]
+\setvariables [document] [color-background=white]
+\setvariables [document] [color-foreground=darkslategray]
+\setvariables [document] [color-headings=firebrick]
+
+% Fonts
+% No  (increasing order of yes): hvmath, mathtimes, iwona, asana, informal, charter, garamond, utopia, cambria
+% Yes (decreasing order of yes): palatino, xits, xitsbidi, euler, pagellaovereuler, schola, times, modern, antykwa-torunska, bonum
+\setvariables [document] [font=palatino]
+\setvariables [document] [fontsize=12pt]
+
+% Document specific information
+\setvariables [document] [title={Combinatorics 2}]
+\setvariables [document] [subtitle={Math Circle at LSU}]
+\setvariables [document] [author={Sudip Sinha}]
+\setvariables [document] [date={2019-06-29}]
+\setvariables [document] [keyword={mathematics, solutions, notes, probability theory, combinatorics, Math Circle}]
+
+
+
 \startproduct *
 
 \project  prj-notes
 
 
+\startstandardmakeup
+	\title    %Titlepage for the book
+\stopstandardmakeup
+ 
+
 \startfrontmatter
 
-	% \component titlepage     %Titlepage for the book
 	\completecontent    % Contents
 
 	\component  cmp-handout
-
 \stopfrontmatter
 
 
