--- a/math/talks/talk20190405.tex
+++ b/math/talks/talk20190405.tex
@@ -1,3 +1,10 @@
+%%%%%%%%%%%%%
+% Variables %
+%%%%%%%%%%%%%
+
+% Language
+\setvariables [document] [language=en]
+
 % Version and mode
 \setvariables [document] [version=final]    % {final, concept, temporary}
 \setvariables [document] [mode=presentation]    % {presentation, manuscript, handout}
