+ talk20190822: first draft

--- a/resume/LaTeX/resume.tex
+++ b/resume/LaTeX/resume.tex
@@ -5,12 +5,12 @@
 \begin{document}
 \name{Sudip Sinha}
 \tagline{Doctoral Student and Teaching Assistant in Mathematics}
-\photo{25mm}{pic.jpg}
+% \photo{25mm}{pic.jpg}
 \personalinfo{%
 	% Not all of these are required!
 	% You can add your own with \printinfo{symbol}{detail}
 	\email{SudipSinha.Bappa@Gmail.com}
-	\phone{+1 754-666-0099}
+	\phone{+1 754 666 0099}
 	\homepage{\href{https://SudipSinha.GitHub.io}{SudipSinha.GitHub.io}}
 	\location{4097 Burbank Dr, Apt 8, Baton Rouge, LA 70808-0401, USA}
 	\linkedin{\href{https://www.linkedin.com/in/SudipSinha}{SudipSinha}}
